<resources>
    <string name="app_name">BarcodeScanningApp</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="description_input_label">Item Name</string>
    <string name="mtag_input_label">Item ID (M-tag)</string>
    <string name="room_num_input_label">Room Number</string>
    <string name="demo_text">Demo Text</string>
    <string name="add_card_title">Add an item.</string>
    <string name="add_card_subtitle">Use the form below to add a new item.</string>

    <!-- Search Fragment Strings -->
    <string name="search_item_title">Search for an item</string>
    <string name="search_card_subtitle">Use the form below to search for an item</string>
    <string name="search_description_input_label">Search for an item</string>
    <string name="search_tag_radio_button_hint">Tag</string>
    <string name="search_description_radio_button_hint">Description</string>
    <string name="search_room_radio_button_hint">Room</string>
    <string name="search_all_radio_button_hint">All</string>

    <string-array name="building_array">
        <item>Streibel Hall</item>
        <item>Odegard Hall</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>