<!-- Layout for search page fragment -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.millner.barcodescanningapp.SearchFragment">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        card_view:cardCornerRadius="2dp"
        android:id="@+id/search_card"
        card_view:contentPaddingBottom="12dp"
        card_view:contentPaddingLeft="14dp"
        card_view:contentPaddingRight="14dp"
        card_view:contentPaddingTop="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_item_title"
                android:fontFamily="sans-serif-light"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/search_fragment_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:hint="@string/search_description_input_label" />

                <Spinner
                    android:id="@+id/search_building_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Spinner.Underlined" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/search_radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:hint="@string/search_all_radio_button_hint"
                            android:id="@+id/all_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:hint="@string/search_tag_radio_button_hint"
                            android:id="@+id/tag_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:hint="@string/search_description_radio_button_hint"
                            android:id="@+id/description_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <RadioButton
                            android:hint="@string/search_room_radio_button_hint"
                            android:id="@+id/room_radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RadioGroup>

                    <Button
                        android:layout_width="35dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.5"
                        android:drawableStart="@drawable/ic_search_black_24dp"
                        android:drawableLeft="@drawable/ic_search_black_24dp"
                        android:id="@+id/search_button"
                        style="?attr/borderlessButtonStyle" />

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_fragment_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
